--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -108,24 +108,6 @@
             display: none
         }
 
-        button {
-            background-color: #6A1B9A;
-            color: #ffffff;
-            border: none;
-            border-radius: 50%;
-            padding: 10px 20px;
-            font-size: 17px;
-            cursor: pointer
-        }
-
-        button:hover {
-            opacity: 0.8
-        }
-
-        button:focus {
-            outline: none !important
-        }
-
         #prevBtn {
             background-color: #bbbbbb
         }
@@ -187,20 +169,20 @@
 
 
             <li class="Btn">
-                <h4>Профиль</h4>
-                <a href="#">Настройки</a>
+                <p class="uk-text-lead">Профиль</p>
+                <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Настройки</button>
             </li>
 
             <li class="Btn uk-margin-medium-top">
-                <h4>Маркетплейс</h4>
-                <a href="#">Кабинет</a>
+                <p class="uk-text-lead">Маркетплейс</p>
+                <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Кабинет</button>
             </li>
 
             <li class="Btn">
-                <a href="#">Товар</a>
+                <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Товар</button>
             </li>
             <li class="Btn">
-                <a href="#">Резюме</a>
+                <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Резюме</button>
             </li>
 
             <!-- <li class="Btn uk-margin-medium-top">
