--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -400,10 +400,10 @@
 
             <div style="overflow:auto;" id="next-previous">
                 <div style="float:right;">
-                    <button type="button" id="prevBtn" style="display: none;" onclick="nextPrev(-1)">
+                    <button type="button" id="prevBtn" style="display: none; border-radius: 1000px; text-align:center; width: 50px; height: 50px; padding: 0;" class="uk-button" onclick="nextPrev(-1)">
                         <i class="fa fa-angle-double-left"></i>
                     </button>
-                    <button name="product_creator" type="button" id="nextBtn" onclick="nextPrev(1)">
+                    <button name="product_creator" type="button" id="nextBtn" style="border-radius: 1000px; text-align:center; width: 50px; height: 50px; padding: 0;" class="uk-button uk-button-primary" onclick="nextPrev(1)">
                         <i class="fa fa-angle-double-right"></i>
                     </button>
                 </div>
