--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -5,11 +5,10 @@
 </div>
 <div class="center">
 
-    <form method="POST" id="products_in_work_id" enctype="multipart/form-data">
+    <form method="POST" id="products_in_work_id" style="background-color: rgba(204, 204, 204, 0.2); margin: 5% 0 ;padding: 2% 20px;" enctype="multipart/form-data">
         {% csrf_token %}
-        <div class="col-sm-9 scrollspy-example" style="margin: auto">
-            <div class="container">
-                <table class="uk-table uk-table-justify" data-spy="scroll" data-target="#spy">
+            <div class="container" >
+                <table class="uk-table uk-table-justify uk-table-divider" data-spy="scroll" data-target="#spy">
                     <thead>
                         <tr>
                             <th class="">ID</th>
@@ -18,6 +17,8 @@
                             <th class="">Заказчик</th>
                             <th class="">Дедлайн</th>
                             <th class="">Статус</th>
+                            <th class="">Отказаться/Завершить</th>
+                            <th class="">Посмотреть пожелания</th>
                         </tr>
                     </thead>
 
@@ -39,12 +40,48 @@
                                         Ожидает оплаты</option>
                                     <option {% if product.status2 == 'end_partner_late' %}selected{% endif %} value="4">
                                         Отказ</option>
-                                </select> </th>
-                        </tr> {% endfor %}
+                                </select>
+                            </th>
+
+                            <td class="uk-text-break"><button name="" form="products_in_work_id" type="button"
+                                    class="uk-button uk-button-danger uk-border-rounded" href="#modal-overflow"
+                                    uk-toggle>отказаться</button></td>
+
+                            <td class="uk-text-break"> <button name="" form="products_in_work_id" type="button"
+                                    class="uk-button uk-button-primary uk-border-rounded" href="#modal-overflow"
+                                    uk-toggle>Посмотреть</button>
+                                <div id="modal-overflow" uk-modal>
+                                    <div class="uk-modal-dialog">
+
+                                        <button class="uk-modal-close-default" type="button" uk-close></button>
+
+                                        <div class="uk-modal-header">
+                                            <h2 class="uk-modal-title uk-text-truncate">Пожелание к товару
+                                                {{ product.product_name }}</h2>
+                                        </div>
+
+                                        <div class="uk-modal-body" uk-overflow-auto>
+                                            <p class="uk-text-small uk-text-break uk-text-emphasis"> Lorem ipsum dolor
+                                                sit amet consectetur adipisicing elit. Possimus est dolore nulla porro
+                                                hic dolor molestiae fugit. Beatae in reprehenderit explicabo consequatur
+                                                commodi. Ducimus, tempora repudiandae maxime itaque soluta eaque. </p>
+
+                                        </div>
+
+                                        <div class="uk-modal-footer uk-text-right">
+                                            <button class="uk-button uk-button-primary uk-modal-close"
+                                                type="button">Закрыть</button>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
-        </div>
+
         <button name="products_in_work" type="submit" class="btn btn-secondary button button">Сохранить</button>
     </form>
 
@@ -71,7 +108,6 @@
                     </div>
 
                 </div>
-
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta fugit minus optio alias dolorum
                     sapiente, facere iusto recusandae quo amet, asperiores deserunt, doloribus atque dolore saepe neque
@@ -90,46 +126,40 @@
         <div class="shadow-none p-3 mb-5 bg-light rounded" style="width: 45%; margin: auto">
             <h1>Запросы</h1>
             <div class="col-sm-12 scrollspy-example shadow p-3 mb-5 bg-body rounded " style="margin: auto">
-                <div class="container">
-                    <form method="GET" id="goodsList" enctype="multipart/form-data">
-                        <div class="uk-overflow-aut">
-                            <table class="uk-table uk-table-justify" data-spy="scroll" data-target="#spy">
-                                <thead>
-                                    <tr>
-                                        <th class="uk-width-small">ID Запроса</th>
-                                        <th class="">Название Товара</th>
-                                        <th class="">Заказчик</th>
-                                        <th class="">Статус</th>
-                                    </tr>
-                                </thead>
+                <form method="GET" id="goodsList" enctype="multipart/form-data">
+                    <div class="uk-overflow-aut">
+                        <table class="uk-table uk-table-justify" data-spy="scroll" data-target="#spy">
+                            <thead>
+                                <tr>
+                                    <th class="uk-width-small">ID Запроса</th>
+                                    <th class="">Название Товара</th>
+                                    <th class="">Заказчик</th>
+                                    <th class="">Статус</th>
+                                </tr>
+                            </thead>
 
-                                <tbody>
-                                    <tr>
-                                        <td class="uk-text-small">380457039457</td>
-                                        <td class="">asdasdasdasdasdasdasdasd</td>
-                                        <td class="">asdasdasdasdasdasdasdasd</td>
-                                        <td class="">
-                                            <button name="status" form="goodsList" type="button" value={{product.id}}
-                                                class="btn btn-outline-secondary"
-                                                onclick="showId()">Согласиться</button>
-                                        </td>
-                                    </tr>
-                                    {% for product in products_v %}
-                                    <tr>
-                                        <td class="">{{ product.id }}</td>
-                                        <td class="">{{ product.product_name }}</td>
-                                        <td class="">{{ product.id_user_buy }}</td>
-                                        <td class="">
-                                            <button name="status" form="goodsList" type="submit" value={{product.id}}
-                                                class="btn btn-outline-secondary">Согласиться</button>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    </form>
-                </div>
+                            <tbody>
+                                {% for product in products_v %}
+                                <tr>
+                                    <td class="">{{ product.id }}</td>
+                                    <td class="">{{ product.product_name }}</td>
+                                    <td class="">{{ product.id_user_buy }}</td>
+                                    <td class="">
+                                        <button name="status" form="goodsList" type="submit" value="{{product.id}}"
+                                            class="uk-button uk-button-primary uk-border-rounded"
+                                            style="margin:auto; padding: 0 15px!important">Согласиться</button>
+                                    </td>
+                                    <td class="">
+                                        <button name="status" form="goodsList" type="button" value="{{product.id}}"
+                                            class="uk-button uk-button-danger uk-border-rounded"
+                                            style="margin:auto; padding: 0 15px!important">Отказаться</button>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -179,8 +209,8 @@
             //             <td class=""></td>
             //             <td class=""></td>
             //             <td class="">
-            //                 <button name="status" form="goodsList" type="button" value={{product.id}}
-            //                     class="btn btn-outline-secondary" onclick="showId()">Согласиться</button>
+            //                 <button name="status" form="goodsList" type="button" value="{{product.id}}"
+            //                     class="uk-button uk-button-primary uk-border-rounded" style="margin:auto; padding: 0 15px!important" onclick="showId()">Согласиться</button>
             //             </td>
             //         </tr>`;
             console.log(i)
