--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -167,12 +167,13 @@
 
                         <div class="uk-modal-footer uk-text-right">
                             <button class="uk-button uk-button-default uk-modal-close" type="button">Закрыть</button>
-                            <button class="uk-button uk-button-primary" type="button" onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Сохранить</button>
+                            <button class="uk-button uk-button-primary" type="button"
+                                onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Сохранить</button>
                         </div>
 
                     </div>
                 </div>
-                <button style="color: black; background-color:darkgray"
+                <button stydiv"color: black; background-color:darkgray"
                     class="uk-button uk-border-pill uk-width-1-1 uk-margin-small-bottom">Показать коннтакты
                     продавца</button>
             </div>
