--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -167,7 +167,10 @@
 
                         <div class="uk-modal-footer uk-text-right">
                             <button class="uk-button uk-button-default uk-modal-close" type="button">Закрыть</button>
-                            <button class="uk-button uk-button-primary" type="button" onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Сохранить</button>
+                            <form method="POST" action="">
+                                {% csrf_token %}
+                                <button class="uk-button uk-button-primary" type="submit" onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Сохранить</button>
+                            </form>
                         </div>
 
                     </div>
