--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -158,19 +158,20 @@
                         <div class="uk-modal-header">
                             <h2 class="uk-modal-title">{{product.id_creator}}</h2>
                         </div>
+                        <form method="POST" action="">
+                            <div class="uk-modal-body" uk-overflow-auto>
+                                <p class="uk-text-small uk-text-break uk-text-light" for="textarea">Опишите продавцу какой
+                                    товар вы хотите. Максимально опишите его )</p>
+                                <textarea class="uk-textarea" name="message" id="" rows="10" style="width: 100%;"></textarea>
+                            </div>
 
-                        <div class="uk-modal-body" uk-overflow-auto>
-                            <p class="uk-text-small uk-text-break uk-text-light" for="textarea">Опишите продавцу какой
-                                товар вы хотите. Максимально опишите его )</p>
-                            <textarea class="uk-textarea" name="" id="" rows="10" style="width: 100%;"></textarea>
-                        </div>
+                            <div class="uk-modal-footer uk-text-right">
+                                <button class="uk-button uk-button-default uk-modal-close" type="button">Закрыть</button>
 
-                        <div class="uk-modal-footer uk-text-right">
-                            <button class="uk-button uk-button-default uk-modal-close" type="button">Закрыть</button>
-                            <form method="POST" action="">
                                 {% csrf_token %}
                                 <button class="uk-button uk-button-primary" type="submit" onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Сохранить</button>
-                            </form>
+                             </div>
+                        </form>
 
                     </div>
                 </div>
