--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -168,20 +168,20 @@
 
 
 
-            <li class="Btn">
+            <li class="Btn uk-text-left">
                 <p class="uk-text-lead">Профиль</p>
                 <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Настройки</button>
             </li>
 
-            <li class="Btn uk-margin-medium-top">
+            <li class="Btn uk-text-left uk-margin-medium-top">
                 <p class="uk-text-lead">Маркетплейс</p>
                 <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Кабинет</button>
             </li>
 
-            <li class="Btn">
+            <li class="Btn uk-text-left">
                 <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Товар</button>
             </li>
-            <li class="Btn">
+            <li class="Btn uk-text-left">
                 <button class="uk-button uk-button-text" style="margin: 0 auto; font-size: 20px; text-transform: lowercase;">Резюме</button>
             </li>
 
