--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -36,7 +36,7 @@
                                 <button class="uk-badge" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="В работе" >1</button>
                                 <button class="uk-badge" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Сделано" >2</button>
                                 <button class="uk-badge" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Ожидает оплаты" >3</button>
-                                <button class="uk-badge" style="background-color: #ee395b;border-color: #ee395b; padding: 10%; margin: 2px;" uk-tooltip="Отказ" >4</button> 
+                                <button class="uk-badge" style="background-color: red;border-color: red; padding: 10%; margin: 2px;" uk-tooltip="Отказ" >4</button> 
                         </th>
                         <td class="uk-text-break">
                             <button name="" form="products_in_work_id" type="button"
