cardProduct.html comments print

--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -322,7 +322,7 @@
                 <div class="uk-flex uk-flex-around">
                     <div style="width: 50%;">
                         <ul class="uk-comment-list">
-<!--                            {% for message in messages %}-->
+                            {% for message in messages %}
                             <li>
                                 <article class="uk-comment uk-comment-primary uk-visible-toggle uk-border-rounded"
                                     tabindex="-1">
@@ -356,7 +356,7 @@
                                     </div>
                                 </article>
                             </li>
-<!--                            {% endfor %}-->
+                            {% endfor %}
                         </ul>
                     </div>
                     <div style="width: 40%;">
