--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -22,12 +22,9 @@
                         <div class="uk-navbar-dropdown-grid uk-child-width-1-5" uk-grid>
                             <div>
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    {% for tag in post.tags.all %}
-                                    <a href="{% url "blog:post_list_by_tag" tag.slug %}">
-                                        {{ tag.name }}
-                                    </a>
-                                    {% if not forloop.last %}, {% endif %}
-                                    {% endfor %}
+                                    {% for item in tags %}
+                                    <a href="creators/goods/search/{{item.text}}"> {{item.text}}
+                                    </a> {% endfor %}
                                 </ul>
                             </div>
                             <!-- <div>
