--- a/bizopt/BO/templates/cardResume.html
+++ b/bizopt/BO/templates/cardResume.html
@@ -61,7 +61,7 @@
 
             <div class="uk-card uk-card-default uk-width-1-4" style="box-shadow: none; padding: 3px; margin: 40px;">
                 <div>
-                    <div class="uk-card uk-card-default" style="">
+                    <div class="uk-card uk-card-default">
                         <div class="uk-card-media-top uk-text-center" style="margin-top: 5%">
                             <img src="{{ product.picture.url }}" width="300" alt="">
                         </div>
